  You can force GNU make to use the simple pipe-based jobserver (perhaps if
  you are integrating with other tools or older versions of GNU make) by
  adding the '--jobserver-style=pipe' option to the command line of the
  top-level invocation of GNU make, or via MAKEFLAGS or GNUMAKEFLAGS.
  To detect this change search for 'jobserver-fifo' in the .FEATURES variable.

* Some POSIX systems (*BSD) do not allow locks to be taken on pipes, which
  caused the output sync feature to not work properly there.  Also multiple
  invocations of make redirecting to the same output file (e.g., /dev/null)
  would cause hangs.  Instead of locking stdout (which does have some useful
  performance characteristics, but is not portable) create a temporary file
  and lock that.  Windows continues to use a mutex as before.

* GNU make has sometimes chosen unexpected, and sub-optimal, chains of
  implicit rules due to the definition of "ought to exist" in the implicit
  rule search algorithm, which considered any prerequisite mentioned in the
  makefile as "ought to exist".  This algorithm has been modified to prefer
  prerequisites mentioned explicitly in the target being built and only if
  that results in no matching rule, will GNU make consider prerequisites
  mentioned in other targets as "ought to exist".
  Implementation provided by Dmitry Goncharov <dgoncharov@users.sf.net>

* GNU make was performing secondary expansion of all targets, even targets
  which didn't need to be considered during the build.  In this release
  only targets which are considered will be secondarily expanded.
  Implementation provided by Dmitry Goncharov <dgoncharov@users.sf.net>

* If the MAKEFLAGS variable is modified in a makefile, it will be re-parsed
  immediately rather than after all makefiles have been read.  Note that
  although all options are parsed immediately, some special effects won't
  appear until after all makefiles are read.
